<resources>
    <string name="app_name">Consumption Meter</string>
    <string name="l_100km">L/100km</string>
    <string name="km_1l">km/L</string>
    <string name="previous_mileage">Previous mileage</string>
    <string name="current_mileage">Current mileage</string>
    <string name="liters_fueled">Liters fueled</string>
    <string name="count">count</string>
    <string name="new_fuelling">New Fueling</string>
    <string name="last_fueling_label">Last fueling:\u0020</string>
    <string name="never_fueled">Never fueled</string>
    <string name="clear_data">Clear all data</string>
    <string name="history">History</string>
    <string name="data_saved">New record saved</string>
    <string name="date">Date</string>
    <string name="mileage">Mileage</string>
    <string name="amount">Amount</string>
    <string name="consumption">Consumption</string>
    <string name="avg_consumption">Average consumption:\u0020</string>
    <string name="title_remove_dialog">Delete record</string>
    <string name="msg_remove_dialog">Confirm delete?</string>
    <string name="delete_confirm">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="show_on_map">Show on map</string>
    <string name="btn_mileage_predict">Predict mileage</string>
    <string name="show_confirm">Show</string>
    <string name="txtVw_tank_volume">Tank volume</string>
    <string name="close">Close</string>
    <string name="msg_not_enough_records">Not enough data</string>
    <string name="change_units_history">Change units</string>
    <string name="current_consumption">Current</string>
    <string name="average">Average</string>
    <string name="save">Save</string>
    <string name="location">Location:\u0020</string>
    <string name="clear_data_confirm">This will erase all records.\nAre you sure?</string>
    <string name="previous_mileage_trim">Previous</string>
    <string name="current_mileage_trim">Current</string>
    <string name="price">Price</string>
    <string name="cost">Cost</string>
    <string name="backup">Backup to SD</string>
    <string name="restore">Restore from SD</string>
    <string name="backup_done">Backup done!</string>
    <string name="record_deleted">Record deleted</string>
    <string name="total">Total in\u0020</string>
</resources>
