<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/history_fragment"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".HistoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/date"
            android:textSize="12sp" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/mileage"
            android:textSize="12sp" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/amount"
            android:textSize="12sp" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark" />

        <LinearLayout
            android:onClick="changeUnits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="OnClick">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/consumption"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtVw_units_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/l_100km"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cost"
            android:textSize="12sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorPrimaryDark" />

    <ListView
        android:id="@+id/vw_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true" />

</LinearLayout>