<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main_fragment"
    android:gravity="center"
    android:padding="@dimen/activity_vertical_margin"
    tools:context=".MainFragment">

        <RelativeLayout
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_width="match_parent"
            >

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ring"
                android:clickable="true"
                android:focusable="true" />
            <!--android:onClick="changeUnits" -->

            <LinearLayout
                android:id="@+id/vW_big_ring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:onClick="changeUnits"
                tools:ignore="OnClick">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/current_consumption"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/txtVw_current_consumption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="10.56"
                    android:textSize="80sp" />

                <TextView
                    android:id="@+id/txtVw_units"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/l_100km"
                    android:textSize="20sp" />
            </LinearLayout>

        </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_weight="1"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ring" />
        <!--android:onClick="changeUnits"-->

        <LinearLayout
            android:id="@+id/vW_small_ring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:onClick="changeUnits"
            tools:ignore="OnClick">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/average"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtVw_avg_consumption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="10.85"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/txtVw_units_avg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/l_100km"
                android:textSize="10sp" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>